fix main page img on mobile

--- a/assets/css/blocks/_media.scss
+++ b/assets/css/blocks/_media.scss
@@ -832,6 +832,7 @@
     .promo {
         background-image: url(../img/promo-__bg-sm.png);
         background-size: initial;
+        background-position: right bottom;
         
         &__date {
             margin-bottom: 8px;
